--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,29 +3,20 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
-    <servlet>
-        <servlet-name>TestServ</servlet-name>
-        <servlet-class>servlets.ServletTest</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>TestServ</servlet-name>
-        <url-pattern>/*</url-pattern>
-    </servlet-mapping>
     <filter>
-        <description>Only firefox allowed</description>
-        <filter-name>BrowserFilter</filter-name>
+        <filter-name>Browser_type_check</filter-name>
         <filter-class>filters.BrowserFilter</filter-class>
     </filter>
     <filter-mapping>
-        <filter-name>BrowserFilter</filter-name>
-        
+        <filter-name>Browser_type_check</filter-name>
+        <url-pattern>/index</url-pattern>
     </filter-mapping>
     <filter>
-        <filter-name>BrowserVersionFilter</filter-name>
-        <r
+        <filter-name>Browser_version_check</filter-name>
+        <filter-class>filters.BrowserVersionFilter</filter-class>
     </filter>
-
-
-
-
+    <filter-mapping>
+        <filter-name>Browser_version_check</filter-name>
+        <url-pattern>/index</url-pattern>
+    </filter-mapping>
 </web-app>
