--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -9,7 +9,7 @@
     </filter>
     <filter-mapping>
         <filter-name>Browser_type_check</filter-name>
-        <url-pattern>/index</url-pattern>
+        <url-pattern>/*</url-pattern>
     </filter-mapping>
     <filter>
         <filter-name>Browser_version_check</filter-name>
@@ -17,6 +17,14 @@
     </filter>
     <filter-mapping>
         <filter-name>Browser_version_check</filter-name>
-        <url-pattern>/index</url-pattern>
+        <url-pattern>/*</url-pattern>
     </filter-mapping>
+    <servlet>
+        <servlet-name>MainServlet</servlet-name>
+        <servlet-class>servlets.ServletTest</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>MainServlet</servlet-name>
+        <url-pattern>/*</url-pattern>
+    </servlet-mapping>
 </web-app>
