--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -9,7 +9,7 @@
     </filter>
     <filter-mapping>
         <filter-name>Browser_version_check</filter-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>/</url-pattern>
     </filter-mapping>
     <filter>
         <filter-name>Browser_type_check</filter-name>
